NetBSD Problem Report #42050

From arto.huusko@pp2.inet.fi  Fri Sep 11 17:52:31 2009
Return-Path: <arto.huusko@pp2.inet.fi>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7CAC263B877
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Sep 2009 17:52:31 +0000 (UTC)
Message-Id: <20090911175137.CBEDF8DDFB@mutteri.local>
Date: Fri, 11 Sep 2009 20:51:37 +0300 (EEST)
From: arto.huusko@pp2.inet.fi
Reply-To: arto.huusko@pp2.inet.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: audio init fails on non-recording hdaudio device
X-Send-Pr-Version: 3.95

>Number:         42050
>Category:       kern
>Synopsis:       audio init fails on non-recording hdaudio device
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    tech-multimedia@NetBSD.org
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Sep 11 17:55:00 +0000 2009
>Closed-Date:    Tue Sep 29 16:00:29 +0000 2009
>Last-Modified:  Fri Oct 16 05:45:01 +0000 2009
>Originator:     Arto Huusko
>Release:        NetBSD 5.99.16
>Organization:
>Environment:
System: NetBSD mutteri.local 5.99.16 NetBSD 5.99.16 (MUTTERI) #8: Thu Sep 10 21:33:38 EEST 2009 root@maailma.local:/local/scratch/build/nbsd-current/amd64/obj/sys/arch/amd64/compile/MUTTERI amd64
Architecture: x86_64
Machine: amd64
>Description:
    Audio init fails on a hdaudio device that does not support recording,
    such as HDMI output on ATI Radeon. Relevant dmesg lines are:

hdaudio0: interrupting at ioapic0 pin 19
hdafg0 at hdaudio0 vendor 0x1002 product 0xAA01 nid 0x01 (firmware configuration)
audio0 at hdafg0: full duplex, independent
audio: could not allocate record buffer
>How-To-Repeat:
    Boot hdaudio kernel on system with output only hdaudio, and see it fail.
>Fix:
    Don't try and fail to init recording on device that does not support
    recording?

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->tech-multimedia@NetBSD.org
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Fri, 11 Sep 2009 23:30:58 +0000
Responsible-Changed-Why:
assign to tech-mm mailing list


From: "Jared D. McNeill" <jmcneill@invisible.ca>
To: <gnats-bugs@NetBSD.org>,
	<tech-multimedia@NetBSD.org>,
	<kern-bug-people@netbsd.org>,
	<netbsd-bugs@netbsd.org>,
	<gnats-admin@netbsd.org>,
	<arto.huusko@pp2.inet.fi>
Cc: 
Subject: RE: kern/42050 (audio init fails on non-recording hdaudio device)
Date: Sat, 12 Sep 2009 07:19:21 -0400

 Please try the following patch, which attempts to make MI audio aware of
 playback- or capture- only devices. 

   http://ftp.netbsd.org/pub/NetBSD/misc/jmcneill/pr42050.patch

 Thanks,
 Jared

From: Arto Huusko <arto.huusko@pp2.inet.fi>
To: "Jared D. McNeill" <jmcneill@invisible.ca>
Cc: gnats-bugs@NetBSD.org
Subject: Re: kern/42050 (audio init fails on non-recording hdaudio device)
Date: Tue, 22 Sep 2009 21:31:41 +0300

 > Please try the following patch, which attempts to make MI audio aware of
 > playback- or capture- only devices. 
 > 
 >   http://ftp.netbsd.org/pub/NetBSD/misc/jmcneill/pr42050.patch

 The patch worked for me: there is no error report during boot,
 and suspend/resume works.

 Thanks a lot!

State-Changed-From-To: open->closed
State-Changed-By: sborrill@NetBSD.org
State-Changed-When: Tue, 29 Sep 2009 16:00:29 +0000
State-Changed-Why:
Submitter confirms patch fixes the problem. Patch committed and pullups requested


From: Stephen Borrill <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42050 CVS commit: src
Date: Tue, 29 Sep 2009 15:58:55 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Tue Sep 29 15:58:54 UTC 2009

 Modified Files:
 	src/share/man/man4: audio.4
 	src/sys/dev: audio.c audio_if.h
 	src/sys/dev/pci/hdaudio: hdaudio_afg.c
 	src/sys/sys: audioio.h

 Log Message:
 Add support for playback- or capture-only devices.

 Fixes PR 42050


 To generate a diff of this commit:
 cvs rdiff -u -r1.69 -r1.70 src/share/man/man4/audio.4
 cvs rdiff -u -r1.247 -r1.248 src/sys/dev/audio.c
 cvs rdiff -u -r1.65 -r1.66 src/sys/dev/audio_if.h
 cvs rdiff -u -r1.15 -r1.16 src/sys/dev/pci/hdaudio/hdaudio_afg.c
 cvs rdiff -u -r1.32 -r1.33 src/sys/sys/audioio.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42050 CVS commit: [netbsd-5] src
Date: Fri, 16 Oct 2009 05:43:38 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Fri Oct 16 05:43:38 UTC 2009

 Modified Files:
 	src/share/man/man4 [netbsd-5]: audio.4
 	src/sys/dev [netbsd-5]: audio.c audio_if.h
 	src/sys/dev/pci/hdaudio [netbsd-5]: hdaudio_afg.c
 	src/sys/sys [netbsd-5]: audioio.h

 Log Message:
 Pull up following revision(s) (requested by sborrill in ticket #1038):
 	share/man/man4/audio.4: revision 1.70 via patch
 	sys/dev/audio.c: revision 1.248
 	sys/dev/audio_if.h: revision 1.66
 	sys/dev/pci/hdaudio/hdaudio_afg.c: revision 1.16
 	sys/sys/audioio.h: revision 1.33
 Add support for playback- or capture-only devices.
 Fixes PR 42050


 To generate a diff of this commit:
 cvs rdiff -u -r1.68 -r1.68.4.1 src/share/man/man4/audio.4
 cvs rdiff -u -r1.243.6.2 -r1.243.6.3 src/sys/dev/audio.c
 cvs rdiff -u -r1.65 -r1.65.14.1 src/sys/dev/audio_if.h
 cvs rdiff -u -r1.14.2.3 -r1.14.2.4 src/sys/dev/pci/hdaudio/hdaudio_afg.c
 cvs rdiff -u -r1.32 -r1.32.44.1 src/sys/sys/audioio.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:
     NetBSD 5.99.16

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.